[package]
name = "rex"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = [  "std", "help", "usage", "error-context", "suggestions", "cargo", "derive"], default-features=false }
nix = { version = "0.27.1", features = ["fs"] }
anyhow = { version = "1.0.75" }
thiserror = "1.0.49"

